@@ -1,3 +1,14 @@
+2000-10-09  Per Bothner  <per@bothner.com>
+
+	* ObjectType.java (getInternalName):  New method.
+	(getNameOrSignature):  Removed, replaced by getInternalName.
+	(getReflectClass):  Update to use getInternalName.
+	* ArrayType.java (getInternalName):  New method, replaces ...
+	(getNameOrSignature):  Removed, replaced by getInternalName.
+	* ConstantPool.java (addClass):  Update to use getInternalName.
+
+	* ObjectType.java (coerceFromObject):  Minor optimization.
+
 2000-08-23  Daniel Bonniot <bonniot@cma.ensmp.fr>
 
 	* CodeAttr.java (emitDup, emitDupX):  New methods.
